--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-touch-carousel": "^0.10.2",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "v6": "^0.0.0",
     "web-vitals": "^2.1.4"
