--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-kakao-maps-sdk": "^1.1.5",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-touch-carousel": "^0.10.2",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "v6": "^0.0.0",
     "web-vitals": "^2.1.4"
