--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-star-rating-component": "^1.4.1",
+    "@types/react-star-ratings": "^2.3.0",
     "axios": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "react-touch-carousel": "^0.10.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
