:bulb:comment: 필요없는 파일, 주석 정리 #1 #6 불필요한 파일 및 주석을 정리했습니다. by @dypark26

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["maping", "SUPABASE"]
+  "cSpell.words": [
+    "coupang",
+    "kakao",
+    "locationtype",
+    "maping",
+    "naver",
+    "SUPABASE"
+  ]
 }
