--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-star-ratings": "^2.3.0",
     "react-touch-carousel": "^0.10.2",
     "styled-components": "^5.3.6",
+    "styled-reset": "^4.4.5",
     "swiper": "^8.4.6",
     "typescript": "^4.9.4",
     "v6": "^0.0.0",
